feat: update registration path endpoint
